--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@babel/preset-typescript": "7.15.0",
     "@babel/runtime": "7.13.17",
-    "@shopware-ag/admin-extension-sdk": "0.0.16",
+    "@shopware-ag/admin-extension-sdk": "0.0.29",
     "@shopware-ag/eslint-config-base": "1.0.0",
     "@shopware-ag/webpack-copy-after-build": "1.0.1",
     "@shopware-ag/webpack-kill-process-on-failed-build": "1.0.0",
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "5.1.0",
     "@typescript-eslint/parser": "5.1.0",
     "@vue/component-compiler-utils": "2.6.0",
+    "@vue/devtools-api": "^6.0.0-beta.20.1",
     "@vvo/tzdb": "6.9.0",
     "ace-builds": "1.4.5",
     "apexcharts": "3.25.0",
