--- a/.gitlab/stages/02-unit.yml
+++ b/.gitlab/stages/02-unit.yml
@@ -98,7 +98,7 @@ PHP coverage:
             cobertura: cobertura.xml
     parallel:
         matrix:
-            - TESTSUITE: ["framework", "checkout", "storefront,administration,system,elasticsearch,profiling,maintenance", "migration"]
+            - TESTSUITE: ["framework", "checkout", "storefront,administration,system,elasticsearch,profiling,maintenance,docs", "migration"]
             - TESTSUITE: "content"
               RUNNER_INSTANCE_TYPE: m5.large
 
