--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,6 +36,7 @@
             <directory suffix=".php">src/Administration/Snippet</directory>
             <file>src/Administration/Administration.php</file>
 
+            <directory suffix=".php">src/Storefront/Checkout</directory>
             <directory suffix=".php">src/Storefront/Controller</directory>
             <directory suffix=".php">src/Storefront/DependencyInjection</directory>
             <directory suffix=".php">src/Storefront/Events</directory>
