--- a/vendor-bin/psalm/composer.json
+++ b/vendor-bin/psalm/composer.json
@@ -7,6 +7,9 @@
   "config": {
     "platform": {
       "php": "7.4.0"
+    },
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true
     }
   },
   "sort-packages": true
