--- a/vendor-bin/roave-backward-compatibility-check/composer.json
+++ b/vendor-bin/roave-backward-compatibility-check/composer.json
@@ -13,6 +13,9 @@
     "config": {
         "platform": {
             "php": "7.4.26"
+        },
+        "allow-plugins": {
+            "ocramius/package-versions": true
         }
     }
 }
