--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -10,6 +10,13 @@ jobs:
   admin:
     runs-on: ubuntu-latest
     container: shopware/development:7.4-composer-2
+    env:
+      APP_ENV: prod
+      DATABASE_URL: mysql://root:root@database:3306/root
+      APP_URL: http://localhost:8000
+      APP_SECRET: devsecret
+      SHOPWARE_ES_HOSTS: elasticsearch:9200
+      BLUE_GREEN_DEPLOYMENT: 1
     services:
       database:
         image: mysql:5.7
@@ -37,6 +44,13 @@ jobs:
   storefront:
     runs-on: ubuntu-latest
     container: shopware/development:7.4-composer-2
+    env:
+      APP_ENV: prod
+      DATABASE_URL: mysql://root:root@database:3306/root
+      APP_URL: http://localhost:8000
+      APP_SECRET: devsecret
+      SHOPWARE_ES_HOSTS: elasticsearch:9200
+      BLUE_GREEN_DEPLOYMENT: 1
     services:
       database:
         image: mysql:5.7
