--- a/vendor-bin/roave-backward-compatibility-check/composer.json
+++ b/vendor-bin/roave-backward-compatibility-check/composer.json
@@ -21,7 +21,21 @@
             "php": "7.4.26"
         },
         "allow-plugins": {
-            "ocramius/package-versions": true
+            "ocramius/package-versions": true,
+            "cweagans/composer-patches": true
+        }
+    },
+    "require": {
+        "cweagans/composer-patches": "^1.7"
+    },
+    "extra": {
+        "patches": {
+            "roave/backward-compatibility-check": {
+                "Add exclude errors": "patches/add-exclude-errors.patch",
+                "Add exclude files": "patches/add-exclude-files.patch",
+                "Add Composer 2": "patches/add-composer-2.patch",
+                "Add Annotation check": "patches/add-annotation-check.patch"
+            }
         }
     }
 }
