--- a/.github/workflows/01-php-lint.yml
+++ b/.github/workflows/01-php-lint.yml
@@ -1,4 +1,4 @@
-name: PHP analysis
+name: PHP Lint
 
 on:
     push:
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: "PHP Analyse"
     container: shopware/development:7.4-composer-2
 
     steps:
