--- a/src/Docs/composer.json
+++ b/src/Docs/composer.json
@@ -36,6 +36,7 @@
         "erusev/parsedown-extra": "0.8.1",
         "guzzlehttp/guzzle": "~7.2",
         "phpdocumentor/reflection-docblock": "^5.3.0",
+        "league/construct-finder": "^1.1",
         "shopware/core": "*",
         "symfony/config": "~5.4.0",
         "symfony/console": "~5.4.1",
