NEXT-18865 - Use `m5.large` for php unit `checkout` coverage job

--- a/.gitlab/stages/02-unit.yml
+++ b/.gitlab/stages/02-unit.yml
@@ -98,8 +98,8 @@ PHP coverage:
             cobertura: cobertura.xml
     parallel:
         matrix:
-            - TESTSUITE: ["framework", "checkout", "storefront,administration,system,elasticsearch,profiling,maintenance,docs", "migration"]
-            - TESTSUITE: "content"
+            - TESTSUITE: ["framework", "storefront,administration,system,elasticsearch,profiling,maintenance,docs", "migration"]
+            - TESTSUITE: ["content", "checkout"]
               RUNNER_INSTANCE_TYPE: m5.large
 
 PHP Full:
