--- a/.gitlab/stages/06-deploy.yml
+++ b/.gitlab/stages/06-deploy.yml
@@ -49,3 +49,24 @@ Repository Split:
               git remote set-url origin https://bot:${PERSONAL_TOKEN}@gitlab.shopware.com/shopware/6/product/many-repositories/$(echo $pkg | awk '{print tolower($0)}').git
               git push origin $SHA1:refs/heads/${CI_COMMIT_BRANCH} -f -u
             done
+
+github sync:
+    extends: .long-running-no-setup
+    stage: deploy
+    image: debian:buster-slim
+    needs: []
+    rules:
+      # only sync on protected branches
+      - if: '$CI_COMMIT_REF_PROTECTED != "true"'
+        when: 'never'
+    environment:
+        name: Github
+        url: https://github.com/shopware
+    variables:
+        GIT_STRATEGY: clone
+        GIT_DEPTH: "0"  # Tells git to fetch all commits
+    script:
+      - apt update && apt install -y git
+      - git remote add github https://${GITHUB_SYNC_USER}:${GITHUB_SYNC_TOKEN}@github.com/shopware/platform
+      - git fetch github
+      - .gitlab/bin/git_sync.bash origin github
