NEXT-18865 - Fix runner tags in templates

--- a/.gitlab/templates/plugin.yml
+++ b/.gitlab/templates/plugin.yml
@@ -74,6 +74,8 @@ workflow:
 
 default:
     image: $DEV_IMAGE
+    tags:
+      - t3.medium
     services:
         - name: mysql:5.7
           alias: database
