--- a/.gitlab/templates/theme.yml
+++ b/.gitlab/templates/theme.yml
@@ -10,13 +10,16 @@ stages:
     - deploy
 
 variables:
+    GIT_STRATEGY: clone
     PROJECT_ROOT: ${CI_PROJECT_DIR}
     WEB_DOCUMENT_ROOT: $CI_PROJECT_DIR/public
     LOG_STDOUT: $CI_PROJECT_DIR/var/log/stdout.log
     MYSQL_ROOT_PASSWORD: root
-    GIT_STRATEGY: clone
+    DATABASE_URL: 'mysql://root:root@database:3306/root'
+    APP_SECRET: 'devsecret'
+    APP_URL: http://localhost:8000
     # cypress
-    CYPRESS_baseUrl: 'http://localhost:8000'
+    CYPRESS_baseUrl: http://localhost:8000
     CYPRESS_localUsage: 1
     CYPRESS_shopwareRoot: $CI_PROJECT_DIR
     SHOPWARE_HTTP_CACHE_ENABLED: 0
@@ -64,12 +67,14 @@ workflow:
     - export THEME_NAME="${THEME_NAME:-${CI_PROJECT_TITLE}}"
 
 .base_install: &base_install
+    - composer config --global allow-plugins.composer/package-versions-deprecated true
+    - composer config --global allow-plugins.bamarni/composer-bin-plugin true
+    - composer config --global allow-plugins.phpstan/extension-installer true
     - composer install --quiet --no-interaction
     - mkdir -p config/jwt || true
     - bin/console system:generate-jwt || true
     - bin/console system:install --drop-database --basic-setup --force >/dev/null
     - bin/console bundle:dump
-    - chown -R application:application .
     - '(cd src/Administration/Resources/app/administration/ && npm ci && npm run build)'
     - '(cd src/Storefront/Resources/app/storefront/ && npm ci && npm run production && node copy-to-vendor.js)'
 
@@ -107,13 +112,14 @@ default:
         - unzip -q /tmp/theme.zip -d custom/apps/$THEME_NAME
         - *base_install
         - *theme_build_install
-        - /entrypoint supervisord > /dev/null 2>&1 &
+        # run php as root to prevent permission issues
+        - SERVICE_PHPFPM_OPTS=--allow-to-run-as-root CONTAINER_UID=root /entrypoint supervisord > /dev/null 2>&1 &
         - cd custom/apps/$THEME_NAME
 
 build zip:
     stage: build
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.4
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.7
         entrypoint: [""]
     rules:
         - exists:
@@ -151,7 +157,7 @@ build zip:
 validate zip:
     stage: test
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.1
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.7
         entrypoint: [""]
     variables:
         GIT_STRATEGY: none
@@ -225,7 +231,7 @@ cypress:
         - unzip -q /tmp/theme.zip -d custom/apps
         - *base_install
         - *theme_install
-        - /entrypoint supervisord > /dev/null 2>&1 &
+        - SERVICE_PHPFPM_OPTS=--allow-to-run-as-root CONTAINER_UID=root /entrypoint supervisord > /dev/null 2>&1 &
         - bin/console e2e:dump-db
         - cd custom/apps/$THEME_NAME/${THEME_SOURCE_DIR}${E2E_PROJECT_PATH}
         - npm ci
@@ -282,7 +288,7 @@ upload zip to store:
         name: account.shopware.com
         url: 'https://account.shopware.com'
     image:
-        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.4
+        name: ghcr.io/friendsofshopware/platform-plugin-dev:v6.4.7
         entrypoint: [""]
     variables:
         GIT_STRATEGY: none
