--- a/composer.json
+++ b/composer.json
@@ -280,7 +280,7 @@
             "phpstan analyze --memory-limit=2G"
         ],
         "psalm": "psalm --config=psalm.xml --threads=4",
-        "bc-check": "roave-backward-compatibility-check --from=$(git merge-base $(git rev-parse HEAD) $(git rev-parse origin/trunk))",
+        "bc-check": "roave-backward-compatibility-check --from=$(git tag -l --sort -version:refname | head -n 1)",
         "static-analyze": [
             "@phpstan src/",
             "@psalm src/"
