--- a/.gitlab/stages/02-unit.yml
+++ b/.gitlab/stages/02-unit.yml
@@ -163,15 +163,12 @@ PHP Full:
             fi
         - >
             if [ "$ONLY_CORE" == "true" ]; then
+                apt-get update && apt-get -y install jq
                 sed -i '/Shopware\\Administration/d' ./config/bundles.php
                 sed -i '/ Shopware\\Docs/d' ./config/bundles.php
                 sed -i '/Shopware\\Storefront/d' ./config/bundles.php
                 sed -i '/Shopware\\Elasticsearch/d' ./config/bundles.php
-                sed -i '/Shopware\\\\Administration/d' ./composer.json
-                sed -i '/Shopware\\\\Docs/d' ./composer.json
-                sed -i '/Shopware\\\\Storefront/d' ./composer.json
-                sed -i '/Shopware\\\\Elasticsearch/d' ./composer.json
-                sed -i 's/"src\/Core\/"\,/"src\/Core\/"/' ./composer.json
+                jq 'del(.replace."shopware/storefront", .replace."shopware/administration", .replace."shopware/elasticsearch", ."autoload-dev", .autoload."psr-4"."Shopware\\\\Administration\\\\", .autoload."psr-4"."Shopware\\\\Docs\\\\", .autoload."psr-4"."Shopware\\\\Storefront\\\\", .autoload."psr-4"."Shopware\\\\Elasticsearch\\\\")' composer.json > composer.json.tmp && mv composer.json.tmp composer.json
                 composer dump-autoload
             fi
         - FAILED=0
