--- a/.gitlab/base.yml
+++ b/.gitlab/base.yml
@@ -34,6 +34,7 @@ variables:
         - !reference [.rules, run]
         - when: always
     before_script:
+        - cp public/.htaccess.dist public/.htaccess
         - composer run setup
         - chown -R application:application .
         - echo 'LogFormat "[httpd:access] %V:%p %h %l %u %t \"%r\" %>s bytesIn:%I bytesOut:%O reqTime:%{ms}T" dockerlog' > /opt/docker/etc/httpd/conf.d/20-custom-log.conf
