--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -31,7 +31,8 @@
     "lint:scss": "stylelint **/*.scss",
     "lint:scss-fix": "npm run lint:scss -- --fix",
     "security-check": "./node_modules/.bin/nsp check",
-    "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
+    "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js",
+    "lighthouse": "node lighthouse-tests.js"
   },
   "dependencies": {
     "@babel/preset-typescript": "7.15.0",
@@ -64,11 +65,14 @@
     "flatpickr": "4.6.3",
     "flush-promises": "1.0.2",
     "fork-ts-checker-webpack-plugin": "6.3.5",
+    "fs-extra": "^10.0.0",
+    "lighthouse": "9.2.0",
     "lodash": "4.17.21",
     "md5-es": "1.8.2",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "optional-chaining-codemod": "1.3.0",
+    "puppeteer": "^13.1.2",
     "stylelint-junit-formatter": "0.2.2",
     "terser-webpack-plugin": "4.2.3",
     "ts-loader": "8.1.0",
