--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "dompdf/dompdf": "1.1.1",
         "elasticsearch/elasticsearch": "7.16.0",
         "enqueue/dbal": "0.10.11",
+        "enqueue/redis": "0.10.9",
         "erusev/parsedown-extra": "0.8.1",
         "ezyang/htmlpurifier": "4.13.0",
         "google/cloud-storage": "~1.25.1",
