--- a/.github/workflows/01-windows-check.yml
+++ b/.github/workflows/01-windows-check.yml
@@ -12,7 +12,9 @@ jobs:
     name: "Windows check"
 
     steps:
-    - name: Clone platform
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
+      - name: Support longpaths
+        run: git config --system core.longpaths true
+
+      - name: Clone platform
+        uses: actions/checkout@v2
+
