--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ src/Docs/Command/wiki.secret
 /performance/_fixtures.php
 /src/Docs/**/dist
 /src/Core/DevOps/Locust/fixtures/*
+/src/Core/DevOps/Locust/env.json
 /src/Core/DevOps/Locust/**/__pycache__/
 
 .php-cs-fixer.cache
