--- a/composer.json
+++ b/composer.json
@@ -354,6 +354,10 @@
         ],
         "e2e:recovery:open": [
             "@e2e:recovery:cypress open"
+        ],
+        "admin:unit": [
+            "@php bin/console framework:schema -s 'entity-schema' src/Administration/Resources/app/administration/test/_mocks_/entity-schema.json",
+            "@npm:admin run unit"
         ]
     },
     "autoload": {
