NEXT-20147 - Add .shopware-project.yml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ src/Docs/Command/wiki.secret
 /src/Core/DevOps/Locust/fixtures/*
 /src/Core/DevOps/Locust/env.json
 /src/Core/DevOps/Locust/**/__pycache__/
+/.shopware-project.yml
 
 .php-cs-fixer.cache
 
