--- a/.github/workflows/02-unit.yml
+++ b/.github/workflows/02-unit.yml
@@ -70,6 +70,25 @@ jobs:
           discovery.type: single-node
 
     steps:
+      - name: Install node 16
+        run: |
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+          export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm install 16
+          nvm use 16
+          nvm alias default 16
+
+      - name: Replace node binary
+        run: |
+          export NVM_DIR="$HOME/.nvm"
+          rm /usr/bin/npm
+          rm /usr/bin/node
+          ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/node /usr/bin/node
+          ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npm
+          npm config set --global user 0
+          npm config set --global unsafe-perm true
+
       - name: Clone platform
         uses: actions/checkout@v2
 
