NEXT-16558 - Add datadog integration

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -134,6 +134,7 @@
             </arguments>
         </listener>
         <listener class="JohnKary\PHPUnit\Listener\SpeedTrapListener" />
+        <listener class="Shopware\Core\Framework\Test\TestCaseBase\DatadogListener" />
 
         <!--Enable to see Test structure violations. (Not formatted) -->
         <!--<listener class="Shopware\Core\Framework\Test\TestCaseBase\TestValidityListener" />-->
