--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -72,7 +72,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "optional-chaining-codemod": "1.3.0",
-    "puppeteer": "^13.1.2",
+    "puppeteer": "13.1.2",
     "stylelint-junit-formatter": "0.2.2",
     "terser-webpack-plugin": "4.2.3",
     "ts-loader": "8.1.0",
