--- a/.gitignore
+++ b/.gitignore
@@ -77,9 +77,9 @@ src/Docs/Command/wiki.secret
 /dev-ops/check_requirements.php
 /performance/_fixtures.php
 /src/Docs/**/dist
-/src/Core/DevOps/Locust/fixtures/*
-/src/Core/DevOps/Locust/env.json
-/src/Core/DevOps/Locust/**/__pycache__/
+src/Core/DevOps/Locust/fixtures/*
+src/Core/DevOps/Locust/env.json
+src/Core/DevOps/Locust/**/__pycache__/
 /.shopware-project.yml
 
 .php-cs-fixer.cache
