--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -70,6 +70,7 @@
         <env name="APP_ENV" value="test" />
         <env name="APP_DEBUG" value="1" />
         <env name="APP_SECRET" value="s$cretf0rt3st" />
+        <env name="SHOPWARE_HTTP_CACHE_ENABLED" value="0" />
 
         <env name="SHELL_VERBOSITY" value="-1" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
