--- a/.gitlab/templates/plugin-cloud-jobs.yml
+++ b/.gitlab/templates/plugin-cloud-jobs.yml
@@ -22,4 +22,4 @@ deploy to cloud staging:
   trigger: shopware-cloud/project-template
   variables:
     VERSION_ORIGIN_REF: '$CI_MERGE_REQUEST_PROJECT_PATH!$CI_MERGE_REQUEST_IID'
-    CUSTOM_VERSION: '${CLOUD_COMPOSER_REF}:dev-${CI_COMMIT_BRANCH}${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME}'
+    CUSTOM_VERSION: '$CLOUD_COMPOSER_REF:dev-$CI_COMMIT_BRANCH$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME'
