--- a/.gitlab/stages/01-lint.yml
+++ b/.gitlab/stages/01-lint.yml
@@ -127,3 +127,33 @@ PHP analysis:
     artifacts:
         reports:
             codequality: phpstan-report.json
+
+
+NPM CI:
+    extends: .base-no-setup
+    stage: lint
+    image: node:$NODE_IMAGE_TAG
+    rules:
+        - !reference [ .rules, skip ]
+        - !reference [ .rules, run ]
+        - changes:
+            - 'src/Administration/Resources/app/administration/package*.json'
+            - 'src/Storefront/Resources/app/storefront/package*.json'
+    before_script: []
+    script:
+        - cd $JS_APP_DIR
+        - npm ci
+    parallel:
+      matrix:
+        - JS_APP_DIR: "src/Administration/Resources/app/administration/"
+          NODE_IMAGE_TAG:
+          - "lts-alpine"
+          - "12-alpine"
+          - "14-alpine"
+          - "16-alpine"
+        - JS_APP_DIR: "src/Storefront/Resources/app/storefront/"
+          NODE_IMAGE_TAG:
+            - "lts-alpine"
+            - "12-alpine"
+            - "14-alpine"
+            - "16-alpine"
