NEXT-20439 - Run `PHP analysis` on composer.json and baseline changes

--- a/.gitlab/stages/01-lint.yml
+++ b/.gitlab/stages/01-lint.yml
@@ -108,6 +108,8 @@ PHP analysis:
         - !reference [.rules, run]
         - changes:
               - phpstan.neon.dist
+              - composer.json
+              - phpstan-baseline.neon
               - psalm.xml
               - .bc-exclude.php
               - 'changelog/**/*.md'
