--- a/composer.json
+++ b/composer.json
@@ -64,12 +64,12 @@
         "composer/composer": "^2.1.9",
         "composer/semver": "^3.2",
         "doctrine/annotations": "1.13.1",
-        "doctrine/dbal": "2.13.3",
+        "doctrine/dbal": "~2.13.8",
         "doctrine/inflector": "~1.4.4",
         "dompdf/dompdf": "1.0.2",
         "elasticsearch/elasticsearch": "7.16.0",
-        "enqueue/dbal": "0.10.11",
-        "enqueue/redis": "0.10.9",
+        "enqueue/dbal": "~0.10.15",
+        "enqueue/redis": "~0.10.9",
         "erusev/parsedown-extra": "0.8.1",
         "ezyang/htmlpurifier": "4.13.0",
         "google/cloud-storage": "~1.25.1",
