--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -94,7 +94,7 @@ parameters:
             message: '#Unsafe usage of new static\(\)#'
             path: src/Core/Framework/Struct/Collection.php
         # Must be fixed with a custom rule
-        - '#Cannot call method fetch.*\(\) on Doctrine\\DBAL\\ForwardCompatibility\\DriverStatement\|int#'
+        - '#Cannot call method fetch.*\(\) on Doctrine\\DBAL\\ForwardCompatibility\\Result\|int\|string#'
         # Exception for CopyBatch file system plugin. It is called via magic method
         - '#Call to an undefined method League\\Flysystem\\FilesystemInterface::copyBatch\(\)\.#'
         -
